feat: add endpoint csrf and refresh
